OSF publication - version 0.9.0-2